--- a/TriadRestockSystem/ClientApp/src/components/CustomLayout.css
+++ b/TriadRestockSystem/ClientApp/src/components/CustomLayout.css
@@ -19,3 +19,27 @@
 	width: 100%;
 	height: auto;
 }
+
+.header-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: end;
+	align-items: center;
+	height: 100%;
+	padding: 0;
+	margin-right: 1rem;
+}
+
+.user-name {
+	margin-right: 1rem;
+}
+
+.user-name span {
+	font-size: 0.95rem;
+	color: #4096ff;
+	font-weight: 400;
+}
+
+.page-name {
+	font-weight: 500;
+}
