--- a/TriadRestockSystem/ClientApp/src/components/DefaultContentStyle.css
+++ b/TriadRestockSystem/ClientApp/src/components/DefaultContentStyle.css
@@ -15,3 +15,17 @@
 .table-container {
 	flex: 1;
 }
+
+.content-header {
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	height: 4rem;
+	justify-content: space-between;
+	align-items: baseline;
+}
+
+.content-header .title {
+	font-weight: bold;
+	font-size: 1.2rem;
+}
