--- a/TriadRestockSystem/ClientApp/src/styles/Loader.css
+++ b/TriadRestockSystem/ClientApp/src/styles/Loader.css
@@ -1,7 +1,32 @@
-.loader-container {
+/* .loader-container {
 	height: 100vh;
 	width: 100vw;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+} */
+
+.overlay {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	display: flex;
+	background-color: #f0f0f0;
+	height: 100%;
+	width: 100%;
+	justify-content: center;
+	align-items: center;
+	z-index: 9999;
+	opacity: 1;
+	transition: 0.3s ease;
+}
+
+.visually-hidden-overlay {
+	opacity: 0;
+}
+
+.hidden-overlay {
+	display: none;
 }
