--- a/TriadRestockSystem/ClientApp/src/styles/DefaultContentStyle.css
+++ b/TriadRestockSystem/ClientApp/src/styles/DefaultContentStyle.css
@@ -127,6 +127,10 @@ table.no-hover thead:hover {
 	background: none !important;
 }
 
+.align-right-input .ant-input-number-input {
+	text-align: right; /* Align text to the right */
+}
+
 /*This is a test*/
 .container-content {
 	width: 90%;
